--- a/index.html
+++ b/index.html
@@ -4,23 +4,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ProType - Modern Typing Speed Test</title>
-    <meta name="description" content="Test your typing speed with ProType - A modern, clean typing test inspired by MonkeyType" />
-    <meta name="author" content="ProType" />
-
-    <meta property="og:title" content="ProType - Modern Typing Speed Test" />
-    <meta property="og:description" content="Test your typing speed with ProType - A modern, clean typing test inspired by MonkeyType" />
+    <title>Typing Speed Test for Developers & Coders | Online WPM Test</title>
+    <meta name="description" content="Typing speed test for developers, coders, and programmers. Practice typing code, measure your WPM, and improve your typing accuracy with real code samples. Track your progress and compete on the leaderboard! टाइपिंग टेस्ट ऑनलाइन, फ्री टाइपिंग स्पीड चेक, हिंदी टाइपिंग प्रैक्टिस, जल्दी टाइपिंग कैसे सीखे, टाइपिंग स्पीड कैसे बढ़ाये, government exam typing practice, ಕನ್ನಡ ಟೈಪಿಂಗ್ ಪರೀಕ್ಷೆ, ಟೈಪಿಂಗ್ ತರಬೇತಿ ಆನ್‌ಲೈನ್, ಟೈಪಿಂಗ್ ವೇಗ ಪರೀಕ್ಷೆ, ಉಚಿತ ಟೈಪಿಂಗ್ ಪಠ್ಯ, ஆன்லைன் தட்டச்சு சோதனை, தட்டச்சு வேகம் சோதிக்க, இலவச தட்டச்சு பயிற்சி, ఉచిత టైపింగ్ టెస్ట్, టైపింగ్ స్పీడ్ ఎలా పెంచాలి, తెలుగు టైపింగ్ పరీక్ష, മലയാളം ടൈപ്പിംഗ് ടെസ്റ്റ്, ഓൺലൈൻ ടൈപ്പിംഗ് പരിശീലനം" />
+    <meta name="keywords" content="typing speed test, code typing test, typing test for coders, typing practice online, wpm typing test, typing test website, typing speed checker, developer typing speed, keyboard typing test, programming typing test, typing test with code samples, online coding typing test, html typing speed test, typing test for programmers, coding practice typing speed, real code typing test online, typing speed test with real code, measure coding speed online, wpm test for developers, how to improve typing speed, benefits of faster typing for developers, best typing test sites in 2025, tips to increase coding speed, typing test accuracy vs speed, typing vs copy-pasting speed, instant typing test results, track typing speed over time, typing stats for developers, typing WPM leaderboard, code-based typing challenges, टाइपिंग टेस्ट ऑनलाइन, फ्री टाइपिंग स्पीड चेक, हिंदी टाइपिंग प्रैक्टिस, जल्दी टाइपिंग कैसे सीखे, टाइपिंग स्पीड कैसे बढ़ाये, government exam typing practice, ಕನ್ನಡ ಟೈಪಿಂಗ್ ಪರೀಕ್ಷೆ, ಟೈಪಿಂಗ್ ತರಬೇತಿ ಆನ್‌ಲೈನ್, ಟೈಪಿಂಗ್ ವೇಗ ಪರೀಕ್ಷೆ, ಉಚಿತ ಟೈಪಿಂಗ್ ಪಠ್ಯ, ஆன்லைன் தட்டச்சு சோதனை, தட்டச்சு வேகம் சோதிக்க, இலவச தட்டச்சு பயிற்சி, ఉచిత టైపింగ్ టెస్ట్, టైపింగ్ స్పీడ్ ఎలా పెంచాలి, తెలుగు టైపింగ్ పరీక్ష, മലയാളം ടൈപ്പിംഗ് ടെസ്റ്റ്, ഓൺലൈൻ ടൈപ്പിംഗ് പരിശീലനം" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Typing Speed Test for Developers & Coders | Online WPM Test" />
+    <meta property="og:description" content="Typing speed test for developers, coders, and programmers. Practice typing code, measure your WPM, and improve your typing accuracy with real code samples. Track your progress and compete on the leaderboard!" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
+    <meta property="og:url" content="https://yourdomain.com/" />
+    <meta property="og:image" content="/public/logo.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@protype_app" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
-    <!-- Keyboard favicon -->
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%233b82f6' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'><rect x='2' y='4' width='20' height='16' rx='2'/><path d='M6 8h.01M10 8h.01M14 8h.01M18 8h.01M8 12h.01M12 12h.01M16 12h.01M7 16h10'/></svg>" type="image/svg+xml">
+    <meta name="twitter:title" content="Typing Speed Test for Developers & Coders | Online WPM Test" />
+    <meta name="twitter:description" content="Typing speed test for developers, coders, and programmers. Practice typing code, measure your WPM, and improve your typing accuracy with real code samples. Track your progress and compete on the leaderboard!" />
+    <meta name="twitter:image" content="/public/logo.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
