--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta property="og:description" content="Typing speed test for developers, coders, and programmers. Practice typing code, measure your WPM, and improve your typing accuracy with real code samples. Track your progress and compete on the leaderboard!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://yourdomain.com/" />
-    <meta property="og:image" content="/public/logo.png" />
+    <meta property="og:image" content="/logonew.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Typing Speed Test for Developers & Coders | Online WPM Test" />
     <meta name="twitter:description" content="Typing speed test for developers, coders, and programmers. Practice typing code, measure your WPM, and improve your typing accuracy with real code samples. Track your progress and compete on the leaderboard!" />
-    <meta name="twitter:image" content="/public/logo.png" />
+    <meta name="twitter:image" content="/logonew.png" />
     <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
   <body>
