--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta name="twitter:description" content="Typing speed test for developers, coders, and programmers. Practice typing code, measure your WPM, and improve your typing accuracy with real code samples. Track your progress and compete on the leaderboard!" />
     <meta name="twitter:image" content="/logonew.png" />
     <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <div id="root"></div>
