Add Google Analytics tracking (G-V59Y79X6PZ)

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
     <meta name="twitter:image" content="/logonew.png" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="manifest" href="/site.webmanifest" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-V59Y79X6PZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-V59Y79X6PZ');
+    </script>
   </head>
   <body>
     <div id="root"></div>
